--- a/src/styles/components/geometry.scss
+++ b/src/styles/components/geometry.scss
@@ -1,6 +1,6 @@
 @import '../config/main.scss';
 
 .sidebar {
-  @include layout-sidebar;
-  overflow: auto;
+  @include layout-sidebar();
 }
+
