--- a/src/styles/config/layout.scss
+++ b/src/styles/config/layout.scss
@@ -9,22 +9,30 @@
 
 @mixin layout-app() {
   display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: getVar(header-height-sm) auto;
+  grid-template-columns: minmax(0, 1fr);
+  grid-template-rows: getVar(header-height-sm) minmax(0, 1fr);
 
   @include min-aspect-ratio(aspect-ratio-break-md-land, xs) {
-    grid-template-columns: auto getVar(sidebar-width-md);
-    grid-template-rows: getVar(header-height-lg) auto getVar(footer-height-lg);
+    grid-template-columns: minmax(0, 1fr) getVar(sidebar-width-sm);
+    grid-template-rows: minmax(0, 1fr);
   }
 
-  @include min-aspect-ratio(aspect-ratio-break-md-port) {
-    grid-template-columns: auto getVar(sidebar-width-md);
-    grid-template-rows: getVar(header-height-md) auto getVar(footer-height-md);
+  @include min-width(sm) {
+    grid-template-columns: minmax(0, 1fr) getVar(sidebar-width-md);
+  }
+
+  @include min-aspect-ratio(aspect-ratio-1-1, md) {
+    grid-template-columns: minmax(0, 1fr) getVar(sidebar-width-md);
+    grid-template-rows: getVar(header-height-md) minmax(0, 1fr) getVar(footer-height-md);
   }
 
   @include min-aspect-ratio(aspect-ratio-break-md-land, md) {
-    grid-template-columns: auto getVar(sidebar-width-lg);
-    grid-template-rows: getVar(header-height-lg) auto getVar(footer-height-lg);
+    grid-template-columns: minmax(0, 1fr) getVar(sidebar-width-lg);
+  }
+
+  @include min-aspect-ratio(aspect-ratio-break-md-land, md) {
+    grid-template-columns: minmax(0, 1fr) getVar(sidebar-width-lg);
+    grid-template-rows: getVar(header-height-md) minmax(0, 1fr);
   }
 }
 
@@ -39,28 +47,39 @@
     right: 0;
   }
 
-  @include min-aspect-ratio(aspect-ratio-break-md-land) {
+  @include min-aspect-ratio(aspect-ratio-break-md-land, md) {
+    position: unset;
     height: getVar(header-height-md);
   }
 }
 
 @mixin layout-main() {
   display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: auto getVar(sidebar-height-sm) getVar(footer-height-sm);
-
-  // grid item props
+  grid-template-columns: 1fr;
+  grid-template-rows: minmax(0, 1fr) getVar(sidebar-height-sm) getVar(footer-height-sm);
   grid-column-start: 1;
   grid-row-start: 2;
   width: 100%;
-  
+  height: 100%;
+
   @include min-aspect-ratio(aspect-ratio-break-md-land, xs) {
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 1;
-    grid-row-end: 3;
-    grid-template-columns: auto getVar(sidebar-width-sm);
-    grid-template-rows: auto getVar(footer-height-sm);
+    grid-template-columns: minmax(0, 1fr) getVar(sidebar-width-sm);
+    grid-template-rows: minmax(0, 1fr) getVar(footer-height-sm);
+  }
+
+  @include min-width(md) {
+    grid-template-columns: minmax(0, 1fr) getVar(sidebar-width-md);
+  }
+
+  @include min-aspect-ratio(aspect-ratio-1-1, md) {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-end: 4;
+    grid-template-columns: minmax(0, 1fr) getVar(sidebar-width-md);
+    grid-template-rows: minmax(0, 1fr) getVar(footer-height-sm);
   }
 
   @include min-aspect-ratio(aspect-ratio-break-md-land) {
@@ -69,32 +88,43 @@
 }
 
 @mixin layout-sidebar() {
+  grid-column-start: 1;
   grid-row-start: 2;
   width: 100%;
+  overflow: scroll;
 
   @include min-aspect-ratio(aspect-ratio-break-md-land, xs) {
     grid-column-start: 2;
     grid-row-start: 1;
-    grid-row-end: 2;
-    margin-top: getVar(header-height-sm);
+    grid-row-end: 3;
+    padding-top: getVar(header-height-sm);
   }
 
-  @include min-aspect-ratio(aspect-ratio-1-1) {
-    flex-direction: column;
+  @include min-aspect-ratio(aspect-ratio-1-1, md) {
     grid-column-start: 2;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    padding-top: getVar(header-height-sm);
+  }
+
+  @include min-aspect-ratio(aspect-ratio-break-md-land) {
     grid-row-end: 2;
   }
 }
 
 @mixin layout-footer() {
   display: flex;
+  grid-column-start: 1;
   grid-row-start: 3;
   justify-content: center;
   width: 100%;
 
-
   @include min-aspect-ratio(aspect-ratio-break-md-land, xs) {
     grid-column-start: 1;
+    grid-row-start: 2;
+  }
+
+  @include min-aspect-ratio(aspect-ratio-1-1, md) {
     grid-row-start: 2;
   }
 
@@ -110,14 +140,17 @@
 
   grid-column-start: 1;
   grid-row-start: 1;
-
+  max-width: 100%;
+  max-height: 100%;
+  
   @include min-aspect-ratio(aspect-ratio-break-md-land, xs) {
     grid-column-start: 1;
     grid-row-start: 1;
-    grid-row-end: 3;
+    grid-row-end: 2;
   }
 
   @include min-aspect-ratio(aspect-ratio-break-md-land) {
     grid-column-start: 1;
+    height: 100%;
   }
 }
