--- a/src/styles/config/variables.scss
+++ b/src/styles/config/variables.scss
@@ -38,8 +38,8 @@ $theme-layout: (
   sidebar-height-sm: 120px,
   sidebar-height-md: 240px,
   sidebar-width-sm: 160px,
-  sidebar-width-md: 200px,
-  sidebar-width-lg: 500px,
+  sidebar-width-md: 220px,
+  sidebar-width-lg: 300px,
 );
 
 $breakpoints: (
